@@ -15,6 +15,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/login.c: Make error messages for invalid usernames more useful.
+---
 server/c_object.c: Change examine to use "Those are" instead of "That is" for
    more than one object.
 Alex Schultz 2007-03-16
